fixing healthcheck